UX review issues for IP page

--- a/src/app/pages/institutional-partnership/sections/promoting/promoting.scss
+++ b/src/app/pages/institutional-partnership/sections/promoting/promoting.scss
@@ -54,6 +54,7 @@
         }
 
         &.tall {
+            grid-row-gap: 4rem;
             grid-template-rows: 1fr auto;
             padding: 4rem;
 
