Adjust banner image position on Impact page
So the person is onscreen on mobile devices

--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -16,6 +16,10 @@ $light: #f8f8f8;
             padding: 3rem 2rem;
         }
 
+        &#banner {
+            background-position-x: 84%;
+        }
+
         &.white {
             background-color: ui-color(white);
         }
