--- a/src/app/pages/rover-by-openstax/sections/banner.scss
+++ b/src/app/pages/rover-by-openstax/sections/banner.scss
@@ -1,7 +1,8 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .rover-by-openstax #banner {
-    padding: calc(11vw + 5.4rem) 0;
+    padding: calc(11vw + 5.4rem) 0 calc(2vw + 2rem);
+    position: relative;
 
     picture,
     picture img {
