Fix login menu and footer headings
The footer headings were not accessible.
The login menu was not aligned properly.

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -1,26 +1,26 @@
 <template args="model">
     <div class="top">
         <div class="boxed">
-            <div role="heading">{model.supporters}</div>
+            <h2>{model.supporters}</h2>
             <div class="mission">
                 It's our mission to give every student the tools they need to
                 be successful in the classroom. Help our cause by
                 <a href="/give" target="_blank">donating</a> today.
             </div>
             <div class="column col1">
-                <div class="column-heading">Help</div>
+                <h3>Help</h3>
                 <a href="/contact">Contact Us</a>
                 <a href="https://openstax.secure.force.com/help">Support Center</a>
                 <a href="/faq">FAQ</a>
             </div>
             <div class="column col2">
-                <div class="column-heading">OpenStax</div>
+                <h3>OpenStax</h3>
                 <a href="/press">Press</a>
                 <a href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Newsletter</a>
                 <a href="/careers">Careers</a>
             </div>
             <div class="column col3">
-                <div class="column-heading">Policies</div>
+                <h3>Policies</h3>
                 <a href="/accessibility-statement">Accessibility Statement</a>
                 <a href="/tos">Terms of Use</a>
                 <a href="/license">Licensing</a>
