Adds line break for book contents.

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -47,6 +47,12 @@
         color: text-color(white);
     }
 
+    .loc-summary-text {
+        p {
+            padding-bottom: 8px;
+        }
+    }
+
     .hero {
         @include set-color-items(gold);
         @include set-color-items(green);
