--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -93,7 +93,7 @@
 
         > hr {
             border: 0;
-            border-bottom: solid 3px ui-color(form-border);
+            border-bottom: solid 0.3rem ui-color(form-border);
             width: 100%;
         }
     }
