--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -10,7 +10,7 @@ button,
 
     &:focus {
         border-radius: 0.3rem;
-        box-shadow: 0 0 5px 3px rgba(os-color(light-blue), 0.7);
+        box-shadow: 0 0 0.5rem 0.3rem rgba(os-color(light-blue), 0.7);
     }
 
     &:hover,
