--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -14,7 +14,7 @@
 
     @include wider-than($tablet-max) {
         &:hover {
-            box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.25);
+            box-shadow: 0 0.8rem 2rem 0 rgba(0, 0, 0, 0.25);
         }
     }
 
