--- a/src/app/pages/errata-summary/errata-summary.scss
+++ b/src/app/pages/errata-summary/errata-summary.scss
@@ -139,7 +139,7 @@ $bar-size: 0.2rem;
         .node,
         .bar {
             background-color: ui-color(page-bg);
-            box-shadow: inset 0 1px 3px rgba(ui-color(footer-bg), 0.4);
+            box-shadow: inset 0 0.1rem 0.3rem rgba(ui-color(footer-bg), 0.4);
 
             &.filled {
                 background-color: os-color(green);
