--- a/src/app/pages/institutional-partnership-application/institutional-partnership-application.scss
+++ b/src/app/pages/institutional-partnership-application/institutional-partnership-application.scss
@@ -105,7 +105,7 @@
 
         .testimonial-box {
             background: ui-color(white);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
