--- a/src/styles/components/radio-buttons.scss
+++ b/src/styles/components/radio-buttons.scss
@@ -1,9 +1,9 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-$custom-radio-size:                 20px;
-$custom-radio-border-width:         1px;
+$custom-radio-size:                 2rem;
+$custom-radio-border-width:         0.1rem;
 $custom-radio-transition-speed:     100ms;
-$custom-radio-inset-shadow:         inset 0 0.1em 1px -0.1em ui-color(default);
+$custom-radio-inset-shadow:         inset 0 0.1em 0.1rem -0.1em ui-color(default);
 
 $custom-radio-pip-color:            os-color(light-blue);
 $custom-radio-pip-size:             round($custom-radio-size * 0.75);
@@ -68,7 +68,7 @@ $custom-radio-disabled-pip-color:   transparentize(os-color(light-blue), 0.40);
     &::after {
         background: $custom-radio-pip-color;
         border-radius: 100%;
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1);
         content: '';
         display: block;
         height: 0;
@@ -79,18 +79,19 @@ $custom-radio-disabled-pip-color:   transparentize(os-color(light-blue), 0.40);
     }
 
     &:checked::after {
+        // sass-lint:disable-block indentation
         height: $custom-radio-pip-size;
         left: floor(
-        + ($custom-radio-size / 2)
-        - ($custom-radio-pip-size / 2)
-        - $custom-radio-border-width
-        + 1
+            + ($custom-radio-size / 2)
+            - ($custom-radio-pip-size / 2)
+            - $custom-radio-border-width
+            + 1
         );
         top: floor(
-        - ($custom-radio-size / 2)
-        - ($custom-radio-pip-size / 2)
-        - $custom-radio-border-width
-        - 0.5
+            - ($custom-radio-size / 2)
+            - ($custom-radio-pip-size / 2)
+            - $custom-radio-border-width
+            - 0.5
         );
         transition: all ease-in-out $custom-radio-transition-speed 0;
         width: $custom-radio-pip-size;
