--- a/src/app/pages/rover-by-openstax/sections/navigator/navigator.html
+++ b/src/app/pages/rover-by-openstax/sections/navigator/navigator.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="top-bar">On this page</div>
+    <div class="top-bar">{model.heading}</div>
     <div class="bottom-bar">
         <div each="sec in model" class="navigation-item" data-target-id="{sec.id}">
             <div>{sec.heading}</div>
