--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -3,9 +3,9 @@
             <div id="mapd"  class="mapd" skip="true"></div>
             <div id="back-impact-div" class="back-impact-div">
                 <span class="close-map-msg">Close map</span>
-                <button id="back-impact-btn" class="back-impact-btn" href="/global-reach">
-                        <i class="fa fa-times left-arrow-bak"></i>
-                </button>
+                <a href="/global-reach"><button id="back-impact-btn" class="back-impact-btn">
+                    <i class="fa fa-times left-arrow-bak"></i>
+                </button></a>
             </div>
             <div id="popup-msg-div" class="popup-msg-div">
                 <div class="popup-msg-cross">
