--- a/src/app/pages/blog-with-search/blog.scss
+++ b/src/app/pages/blog-with-search/blog.scss
@@ -1,36 +1,20 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .blog.page {
+    display: grid;
+    grid-row-gap: 5rem;
+    justify-items: center;
+    padding-bottom: 5rem;
+    width: 100%;
+
     .content .meta {
         .author::after {
             content: ' | ';
         }
     }
 
-    .articles {
-        display: flex;
-        flex-flow: column nowrap;
-
-        @include wider-than($tablet-max) {
-            background-color: ui-color(form-bg);
-            border-top: thin solid ui-color(form-border);
-            padding: 2rem 0;
-        }
-
-        .boxed {
-            display: block;
-
-            @include wider-than($tablet-max) {
-                align-items: stretch;
-                display: flex;
-                flex-flow: row wrap;
-                padding: 0;
-            }
-
-            .search {
-                margin: 0 auto;
-            }
-        }
+    .strips {
+        bottom: 0;
     }
 
     .update-box {
@@ -68,5 +52,9 @@
             transform: scale(2);
         }
 
+    }
+
+    .disqus {
+        @extend %text-content;
     }
 }
