Fixes rest of the cards related to map

--- a/src/app/pages/global-reach/map/map.html
+++ b/src/app/pages/global-reach/map/map.html
@@ -15,7 +15,7 @@
                 <div id="search_img_div" class="search-img-div">
                     <img class="searchimg" src="./images/home/search.png" alt="">
                 </div>
-            <div id="search_filter_div" class="search-filter-div">
+                <div id="search_filter_div" class="search-filter-div">
                     <button class="filter-btn" value="0">
                         <span class="filter-icons">
                             <span class="fas fa-sliders-h filter-style"></span>
@@ -67,6 +67,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="loading-impact-div" class="loading-impact-div" hidden>
+        <i class="fas fa-spinner fa-spin"></i>
     </div>
     <div class="map-txt-link boxed container">
         <div class="maptxt" id="maptxt">
