Handle image alt tags for press and blog
Just a couple final fixes

--- a/src/app/pages/blog/article/formatted-as/feature.html
+++ b/src/app/pages/blog/article/formatted-as/feature.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="hero" style="{backgroundImage: `url(${model.coverUrl})`}"
-        role="img" aria-label="{model.featured_image_alt_text}"
+        role="img" aria-label="{model.coverAltText}"
     >
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     </div>
