--- a/src/app/pages/press/press-excerpt/press-excerpt.html
+++ b/src/app/pages/press/press-excerpt/press-excerpt.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <img if="model.iconUrl" src="{model.iconUrl}">
+    <img if="model.iconUrl" src="{model.iconUrl}" alt="">
     <div class="byline">
         <if condition="model.source">
             <span class="source">{model.source}</span> -
