Get Rover image out of the way of text
Tweak Rover image placement so that it does not overlay the text on any size screen. (Except 601 pixels, which is a pattern library issue for which a fix PR is up.)

--- a/src/app/pages/rover-by-openstax/sections/getting-started.scss
+++ b/src/app/pages/rover-by-openstax/sections/getting-started.scss
@@ -18,14 +18,15 @@
 
         @include width-up-to($phone-max) {
             grid-template-columns: 100%;
+            margin-bottom: 2rem;
         }
 
         .text-block {
             @include wider-than($phone-max) {
-                padding-right: calc(30vw - 7rem);
+                padding-right: calc(30vw - 3rem);
             }
             @include wider-than($media-content-max) {
-                padding-right: calc(#{$media-content-max / 2} - 27vw);
+                padding-right: calc(#{$media-content-max / 2} - 22vw);
             }
         }
 
