Reduce navigator font size

--- a/src/app/pages/rover-by-openstax/sections/navigator/navigator.html
+++ b/src/app/pages/rover-by-openstax/sections/navigator/navigator.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="top-bar">{model.heading}</div>
     <div class="bottom-bar">
-        <div each="sec in model" class="navigation-item" data-target-id="{sec.id}">
+        <div each="sec in model" class="navigation-item" data-target-id="{sec.id}" role="button" tabindex="1">
             <div>{sec.heading}</div>
             <div class="{`indicator ${model.currentId === sec.id ? 'active' : ''}`}"></div>
         </div>
