--- a/src/app/pages/global-reach/map/schoolinfo-head.html
+++ b/src/app/pages/global-reach/map/schoolinfo-head.html
@@ -1,4 +1,4 @@
 <template args="model"></template>
     <div class="list-heading">{model.name}</div>
-    <div class="list-address">CITYSTATESHOULDSHOWHERE</div>
+    <div class="list-address">{model.citystate}</div>
 </template>
