--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -1,21 +1,18 @@
 <template args="model">
-        <main id="maincontent" class="separate-map-main hide-until-loaded {model.loaded}">
-            <div id="mapd"  class="mapd" skip="true"></div>
-            <div id="back-impact-div" class="back-impact-div">
-                <span class="close-map-msg">Close map</span>
-                <a href="/global-reach"><button id="back-impact-btn" class="back-impact-btn">
-                    <i class="fa fa-times left-arrow-bak"></i>
-                </button></a>
-            </div>
-            <div id="popup-msg-div" class="popup-msg-div">
-                <div class="popup-msg-cross">
-                    <i class="fa fa-times popup-msg-cross-icon"></i>
-                </div>    
-                <div class="popup-msg-content">
-                    <div>Not seeing your school?<br>Numbers aren't right?</div> 
-                    <div class="popup-msg-link"><a href="https://openstax.org/adoption">Let us know.</a></div>
-                    <div>Since our books are free,<br>we rely on instructors to<br>tell us they’re using our<br> books.</div>        
-                </div>
-            </div>
-        </main>
+    <div id="mapd" class="mapd" skip="true"></div>
+    <a href="/global-reach" class="back-impact-div">
+        <span class="close-map-msg">Close map</span>
+        <div class="back-impact-btn">
+            <i class="fa fa-times left-arrow-bak"></i>
+        </div>
+    </a>
+    <div class="search-box-region {model.searchBoxMinimized ? 'minimized' : ''}" skip="true"></div>
+    <div class="popup-msg-div" if="model.popupVisible">
+        <div class="popup-msg-cross">
+            <i class="fa fa-times popup-msg-cross-icon" role="button" tabindex="0"></i>
+        </div>
+        <div>Not seeing your school? Numbers aren't right?</div>
+        <div class="popup-msg-link"><a href="https://openstax.org/adoption">Let us know.</a></div>
+        <div>Since our books are free, we rely on instructors to tell us they’re using our books.</div>
+    </div>
 </template>
