Removed HTML parsing.

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -51,6 +51,11 @@
         p {
             padding-bottom: 2.4rem;
         }
+        
+        p:empty,
+        br {
+            display: none;
+        }
     }
 
     .hero {
