--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -49,7 +49,12 @@
 
     .loc-summary-text {
         p {
-            padding-bottom: 0.8rem;
+            padding-bottom: 2.4rem;
+        }
+        
+        p:empty,
+        br {
+            display: none;
         }
     }
 
