Last child doesn't have padding

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -51,6 +51,9 @@
         p {
             padding-bottom: 2.4rem;
         }
+        p:last-child {
+            padding-bottom: 0;
+        }
         
         p:empty,
         br {
