Put TOC in side panel
Create a side "drawer" for the table of contents on the Details page. The link acts as a toggle.

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -122,8 +122,22 @@
             }
         }
 
-        a:hover {
-            color: text-color(link-hover);
+        a {
+            border-radius: 0.4rem;
+
+            &:hover {
+                color: text-color(link-hover);
+            }
+            &[aria-pressed="true"] {
+                background-color: text-color(link);
+                color: text-color(white);
+
+                &:hover {
+                    background-color: text-color(link-hover);
+                    color: text-color(white);
+                }
+            }
         }
+
     }
 }
