--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -2,8 +2,8 @@
     <div class="modal-region" hidden="{model.modalHiddenAttribute}" skip="true"></div>
     <div class="get-this-title">
         <div class="options">
-            <div if="model.includeTOC && model.tableOfContents" class="option">
-                <a href="/" role="button" class="show-toc">
+            <div if="model.includeTOC" class="option">
+                <a href="/" role="button" class="show-toc" aria-pressed="{model.tocActive}">
                     <span class="fa fa-list-ol"></span>
                     <span class="text">Table of contents</span>
                 </a>
