--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -2,7 +2,7 @@
     <div class="modal-region" hidden="{model.modalHiddenAttribute}" skip="true"></div>
     <div class="get-this-title">
         <div class="options">
-            <div if="model.includeTOC" class="option">
+            <div if="model.includeTOC" class="option toc-option">
                 <a href="/" role="button" class="show-toc" aria-pressed="{model.tocActive}">
                     <span class="fa fa-list-ol"></span>
                     <span class="text">Table of contents</span>
