--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -139,5 +139,11 @@
             }
         }
 
+        @include width-up-to($phone-max) {
+            &.toc-option {
+                display: none;
+            }
+        }
+
     }
 }
