Fix TOC height and webview links
Made toc-slideout relative positioned again, so `top` works.
Fixed links for sections (like Index) in TOC. Turns out webview_link doesn't work for those.

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -56,6 +56,7 @@
                 border-right: thin solid ui-color(form-border);
                 overflow-y: auto;
                 padding: 3rem;
+                position: relative;
                 transition: width 0.3s;
                 width: 30vw;
             }
